--- a/PlatziTrips/PlatziTrips/PlatziTrips.Android/Resources/layout/NuevoViaje.axml
+++ b/PlatziTrips/PlatziTrips/PlatziTrips.Android/Resources/layout/NuevoViaje.axml
@@ -27,7 +27,7 @@
             android:minWidth="25px"
             android:minHeight="25px" />
         <Button
-            android:text="Button"
+            android:text="Guardar Viaje"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/guardarViajeButton" />
